--- a/Mars Explorer/Base.lproj/Main.storyboard
+++ b/Mars Explorer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dmH-9l-QK4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="JIk-9B-Nkc">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -32,37 +32,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="lwb-jH-oHz">
-                                <rect key="frame" x="20" y="512" width="208" height="236"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ecm-75-JOc">
-                                        <rect key="frame" x="0.0" y="0.0" width="208" height="112"/>
-                                        <fontDescription key="fontDescription" name="VenusRising-Regular" family="Venus Rising" pointSize="24"/>
-                                        <state key="normal" title="ROVER" backgroundImage="Button">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <state key="highlighted" title="ROVER" backgroundImage="Button Highlighted">
-                                            <color key="titleColor" red="0.22352941176470587" green="0.79607843137254897" blue="0.84313725490196079" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonTapped:" destination="JIk-9B-Nkc" eventType="touchUpInside" id="flm-Ee-v3b"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXx-7l-UJh">
-                                        <rect key="frame" x="0.0" y="124" width="208" height="112"/>
-                                        <fontDescription key="fontDescription" name="VenusRising-Regular" family="Venus Rising" pointSize="24"/>
-                                        <state key="normal" title="SOL" backgroundImage="Button">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <state key="highlighted" backgroundImage="Button Highlighted">
-                                            <color key="titleColor" red="0.22352941179999999" green="0.79607843140000001" blue="0.84313725490000002" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonTapped:" destination="JIk-9B-Nkc" eventType="touchUpInside" id="BeW-ef-qhK"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ecm-75-JOc">
+                                <rect key="frame" x="408" y="328" width="208" height="112"/>
+                                <fontDescription key="fontDescription" name="VenusRising-Regular" family="Venus Rising" pointSize="24"/>
+                                <state key="normal" title="START" backgroundImage="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="disabled" title="START"/>
+                                <state key="selected" title="START"/>
+                                <state key="highlighted" title="START" backgroundImage="Button Highlighted">
+                                    <color key="titleColor" red="0.22352941176470587" green="0.79607843137254897" blue="0.84313725490196079" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="startButtonTapped:" destination="JIk-9B-Nkc" eventType="touchUpInside" id="GSq-TU-iEP"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dcZ-ZI-XsG" customClass="SciFiActivitySpinner" customModule="Mars_Explorer" customModuleProvider="target">
                                 <rect key="frame" x="256" y="128" width="512" height="512"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -187,7 +171,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="F4V-Lm-zOM">
-                                        <rect key="frame" x="221" y="76.5" width="271" height="155.5"/>
+                                        <rect key="frame" x="221" y="76" width="271" height="155.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yey-tm-1yw">
                                                 <rect key="frame" x="0.0" y="0.0" width="271" height="21.5"/>
@@ -258,11 +242,16 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZOP-ld-mL3" customClass="NumberPadView" customModule="Mars_Explorer" customModuleProvider="target">
+                                <rect key="frame" x="256" y="128" width="512" height="512"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="vOn-Lq-G24" firstAttribute="centerY" secondItem="zXx-7l-UJh" secondAttribute="centerY" id="03A-dW-FhJ"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="lwb-jH-oHz" secondAttribute="leading" id="5fB-aN-3y1"/>
+                            <constraint firstItem="ecm-75-JOc" firstAttribute="centerX" secondItem="pok-A6-rD8" secondAttribute="centerX" id="57n-G0-1xq"/>
+                            <constraint firstItem="ZOP-ld-mL3" firstAttribute="centerY" secondItem="pok-A6-rD8" secondAttribute="centerY" id="9Mx-Zc-G7H"/>
+                            <constraint firstItem="ZOP-ld-mL3" firstAttribute="height" secondItem="dcZ-ZI-XsG" secondAttribute="height" id="COY-wr-Xmj"/>
                             <constraint firstAttribute="trailingMargin" secondItem="diU-F1-3WS" secondAttribute="trailing" id="Cka-8h-emV"/>
                             <constraint firstItem="geu-PO-C88" firstAttribute="centerY" secondItem="pok-A6-rD8" secondAttribute="centerY" id="DsZ-Ng-MD7"/>
                             <constraint firstItem="dcZ-ZI-XsG" firstAttribute="width" secondItem="pok-A6-rD8" secondAttribute="width" multiplier="0.5" id="EZI-ZT-Kg3"/>
@@ -275,12 +264,15 @@
                             <constraint firstItem="y5y-aF-OgI" firstAttribute="centerX" secondItem="pok-A6-rD8" secondAttribute="centerX" id="XAx-NU-DvC"/>
                             <constraint firstItem="nbG-JS-0ga" firstAttribute="centerX" secondItem="pok-A6-rD8" secondAttribute="centerX" id="daG-k9-Q8c"/>
                             <constraint firstItem="dcZ-ZI-XsG" firstAttribute="centerX" secondItem="pok-A6-rD8" secondAttribute="centerX" id="ejT-f4-Jtl"/>
+                            <constraint firstItem="ZOP-ld-mL3" firstAttribute="width" secondItem="dcZ-ZI-XsG" secondAttribute="width" id="fpW-9e-st0"/>
+                            <constraint firstItem="fgj-tE-o0A" firstAttribute="top" secondItem="vOn-Lq-G24" secondAttribute="bottom" constant="20" id="j1K-RV-q3i"/>
                             <constraint firstItem="geu-PO-C88" firstAttribute="width" secondItem="dcZ-ZI-XsG" secondAttribute="width" multiplier="0.65" id="jwZ-4x-cPT"/>
                             <constraint firstItem="nbG-JS-0ga" firstAttribute="height" secondItem="pok-A6-rD8" secondAttribute="height" multiplier="0.4" id="lSC-zJ-tFn"/>
                             <constraint firstItem="nbG-JS-0ga" firstAttribute="width" secondItem="y5y-aF-OgI" secondAttribute="width" id="lnK-f6-iLl"/>
+                            <constraint firstItem="ZOP-ld-mL3" firstAttribute="centerX" secondItem="pok-A6-rD8" secondAttribute="centerX" id="noa-od-Nd1"/>
                             <constraint firstItem="y5y-aF-OgI" firstAttribute="width" secondItem="dcZ-ZI-XsG" secondAttribute="width" id="olh-26-VBD"/>
                             <constraint firstItem="y5y-aF-OgI" firstAttribute="centerY" secondItem="pok-A6-rD8" secondAttribute="centerY" id="pl3-vI-abE"/>
-                            <constraint firstItem="fgj-tE-o0A" firstAttribute="top" secondItem="lwb-jH-oHz" secondAttribute="bottom" constant="20" id="t5J-wv-Moz"/>
+                            <constraint firstItem="ecm-75-JOc" firstAttribute="centerY" secondItem="pok-A6-rD8" secondAttribute="centerY" id="ugp-IT-Swb"/>
                             <constraint firstItem="diU-F1-3WS" firstAttribute="top" secondItem="7Me-ph-Is3" secondAttribute="bottom" constant="8" symbolic="YES" id="vNe-IG-egB"/>
                             <constraint firstItem="geu-PO-C88" firstAttribute="height" secondItem="dcZ-ZI-XsG" secondAttribute="height" multiplier="0.2" id="yuM-qa-7HO"/>
                         </constraints>
@@ -289,12 +281,12 @@
                         <outlet property="exploreButton" destination="vOn-Lq-G24" id="EOk-ax-PSo"/>
                         <outlet property="loadingMessageLabel" destination="CJp-Bc-MLv" id="JGz-QY-7Hb"/>
                         <outlet property="messageView" destination="geu-PO-C88" id="0zQ-m1-CzC"/>
-                        <outlet property="roverButton" destination="ecm-75-JOc" id="hbR-AB-dF7"/>
+                        <outlet property="numberPadView" destination="ZOP-ld-mL3" id="An8-Qr-l6v"/>
                         <outlet property="roverManifestPanel" destination="nbG-JS-0ga" id="G5z-MC-nPw"/>
                         <outlet property="roverSelectionPanel" destination="y5y-aF-OgI" id="aCP-z0-rRy"/>
                         <outlet property="roverSelectionPanelCenterYConstraint" destination="pl3-vI-abE" id="mnW-GB-vAC"/>
                         <outlet property="scifiSpinner" destination="dcZ-ZI-XsG" id="ONH-h5-hg7"/>
-                        <outlet property="solButton" destination="zXx-7l-UJh" id="Ssw-Pf-HE5"/>
+                        <outlet property="startButton" destination="ecm-75-JOc" id="iis-LI-AlZ"/>
                         <outletCollection property="roverButtons" destination="v1k-Kh-73R" collectionClass="NSMutableArray" id="gdl-Kx-WHm"/>
                         <outletCollection property="roverButtons" destination="vnH-g8-tVh" collectionClass="NSMutableArray" id="Se7-zD-eaM"/>
                         <outletCollection property="roverButtons" destination="stn-S7-rxV" collectionClass="NSMutableArray" id="8Wm-oA-OEn"/>
@@ -307,7 +299,7 @@
         <!--Exploration View Controller-->
         <scene sceneID="blC-95-zWY">
             <objects>
-                <viewController id="dmH-9l-QK4" customClass="ExplorationViewController" customModule="Mars_Explorer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ExploreViewController" id="dmH-9l-QK4" customClass="ExplorationViewController" customModule="Mars_Explorer" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Qc1-bO-6ua"/>
                         <viewControllerLayoutGuide type="bottom" id="TsC-na-Tbt"/>
@@ -363,7 +355,7 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SOL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Utb-xe-DBC">
-                                        <rect key="frame" x="462" y="35.5" width="61.5" height="26.5"/>
+                                        <rect key="frame" x="462" y="35" width="61.5" height="26.5"/>
                                         <fontDescription key="fontDescription" name="VenusRising-Regular" family="Venus Rising" pointSize="22"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
